--- a/site/css/style.css
+++ b/site/css/style.css
@@ -12,32 +12,89 @@ body
 	height:                     50em;
 	bottom:                     0;
 	left:                       50%;
-	transform:                  translate(-50%, 0);
+	margin-left:                -50em;
 	background-image:           url("../img/HalfTone.png");
-	background-position:        center bottom;
-	background-size:            100%;
+	background-size:            auto 100%;
+	background-repeat:          no-repeat;
 }
 
-#HalfToneBlast_BlastRays
+#HalfToneBlast-Center
+{
+	position:                   absolute;
+	left:                       50%;
+	bottom:                     0;
+}
+
+#HalfToneBlast-BlastRays
 {
 	position:                   absolute;
 	width:                      150em;
 	height:                     150em;
-	left:                       50%;
-	bottom:                     0;
-	transform:                  translate(-50%, 50%);
+	left:                       -75em;
+	bottom:                     -75em;
+	animation:                  fullRotation 180s linear infinite;
 }
 
-#HalfToneBlast_Center
+@keyframes fullRotation
+{
+	100% { transform: rotate(360deg); }
+}
+
+.blastRotation-1
+{
+	animation:                  blastRotationAnimation-1 25s ease-in-out infinite alternate
+}
+
+.blastRotation-2
+{
+	animation:                  blastRotationAnimation-2 30s ease-in-out infinite alternate
+}
+
+.blastRotation-3
+{
+	animation:                  blastRotationAnimation-3 20s ease-in-out infinite alternate
+}
+
+@keyframes blastRotationAnimation-1
+{
+	0%   { transform: rotate(5deg);  }
+	25%  { transform: rotate(0deg); }
+	75%  { transform: rotate(8deg);  }
+	100% { transform: rotate(3deg); }
+}
+
+@keyframes blastRotationAnimation-2
+{
+	10%  { transform: rotate(0deg);  }
+	50%  { transform: rotate(10deg); }
+	90%  { transform: rotate(1deg);  }
+	100% { transform: rotate(5deg);  }
+}
+
+@keyframes blastRotationAnimation-3
+{
+	40%  { transform: rotate(0deg); }
+	60%  { transform: rotate(7deg);  }
+	80%  { transform: rotate(2deg); }
+	100% { transform: rotate(10deg); }
+}
+
+#HalfToneBlast-Bubbles
 {
 	position:                   absolute;
-	width:                      40em;
+	width:                      100%;
+	height:                     100%;
+}
+
+#HalfToneBlast-Cap
+{
+	position:                   absolute;
+	width:                      50em;
 	height:                     50em;
 	border-radius:              50%;
-	bottom:                     0;
-	left:                       50%;
-	transform:                  translate(-50%, 50%);
-	background:                 radial-gradient(ellipse at center, rgba(250,250,250,1) 10%,rgba(255,255,255,0) 50%););
+	bottom:                     -25em;
+	left:                       -25em;
+	background:                 radial-gradient(ellipse at center, rgba(250,250,250,1) 10%,rgba(255,255,255,0) 50%);
 }
 
 .bubble
@@ -85,14 +142,14 @@ body
 	border-top:                 1.5em solid white;
 }
 
-.bubble.bubble_left::before
+.bubble.bubble-left::before
 {
 	left:                       1.075em;
 	border-right:               1.25em solid transparent;
 	border-left:                0.75em solid transparent;
 }
 
-.bubble.bubble_left::after
+.bubble.bubble-left::after
 {
 	left:                       1em;
 	border-right:               1.5em solid transparent;
@@ -102,7 +159,78 @@ body
 #BlastZone
 {
 	position:                   fixed;
-	bottom:                     0.5em;
-	left:                       0.5em;
-	font-size:                  20em;
+	bottom:                     0.1em;
+	left:                       0.3em;
+	font-size:                  40em;
+}
+
+.comic-page
+{
+	position:                   absolute;
+	background-color:           white;
+	padding:                    1em 0 0 1em;
+	width:                      60em;
+	right:                      1em;
+	top:                        1em;
+	border:                     1px #999 solid;
+	border-radius:              0.2em;
+	box-shadow:                 0 0.25em 2em -0.5em rgba(0, 0, 0, 0.5);
+	background:                 linear-gradient(45deg, rgba(200,200,200,0.9) 10%,rgba(255,255,255,0.75) 50%);
+}
+
+.comic-frame
+{
+	display:                    inline-block;
+	width:                      19em;
+	height:                     15em;
+	margin:                     0 1em 1em 0;
+	background-color:           white;
+}
+
+.comic-frame-twoThirds
+{
+	width:                      39em;
+}
+
+.comic-frame-half
+{
+	width:                      29em;
+}
+
+.comic-frame-content
+{
+	position:                   relative;
+	border:                     0.2em #333 solid;
+	width:                      100%;
+	height:                     100%;
+	margin:                     -0.1em 0 0 -0.1em;
+	border-radius:              0.2em;
+}
+
+@media (max-width: 1000px)
+{
+	.comic-page
+	{
+		font-size:                  0.5em;
+	}
+	
+	#BlastZone
+	{
+		font-size:                  25em;
+	}
+}
+
+@media (max-width: 600px)
+{
+	#HalfToneBlast
+	{
+		font-size:                  0.5em;
+	}
+	
+	#BlastZone
+	{
+		font-size:                  30em;
+		left:                       50%;
+		bottom:                     -0.5em;
+	}
 }
