--- a/site/css/style.css
+++ b/site/css/style.css
@@ -2,7 +2,17 @@ body
 {
 	font-size:                  1em;
 	background-color:           #71D9E8;
+	overflow:                   auto;
+}
+
+#Background
+{
+	position:                   fixed;
+	width:                      100%;
+	height:                     100%;
 	overflow:                   hidden;
+	top:                        0;
+	left:                       0;
 }
 
 #HalfToneBlast
@@ -192,10 +202,16 @@ body
 	width:                      39em;
 }
 
-.comic-frame-half
+.comic-frame-oneHalf
 {
 	width:                      29em;
 }
+
+.comic-frame-full
+{
+	width:                      59em;
+}
+
 
 .comic-frame-content
 {
