--- a/site/css/style.css
+++ b/site/css/style.css
@@ -99,12 +99,12 @@ body
 #HalfToneBlast-Cap
 {
 	position:                   absolute;
-	width:                      50em;
-	height:                     50em;
+	width:                      100em;
+	height:                     100em;
 	border-radius:              50%;
-	bottom:                     -25em;
-	left:                       -25em;
-	background:                 radial-gradient(ellipse at center, rgba(250,250,250,1) 10%,rgba(255,255,255,0) 50%);
+	bottom:                     -50em;
+	left:                       -50em;
+	background:                 radial-gradient(ellipse at center, rgba(250,250,250,1) 5%,rgba(255,255,255,0) 50%);
 }
 
 .bubble
@@ -174,14 +174,20 @@ body
 	font-size:                  30em;
 }
 
-.comic-page
+.comic-book
 {
 	position:                   absolute;
+	margin:                     20em 2em;
+	right:                      0;
+	top:                        0;
+}
+
+.comic-page
+{
 	background-color:           white;
 	padding:                    1em 0 0 1em;
+	margin:                     5em 0;
 	width:                      60em;
-	right:                      1em;
-	top:                        1em;
 	border:                     1px #999 solid;
 	border-radius:              0.2em;
 	box-shadow:                 0 0.25em 2em -0.5em rgba(0, 0, 0, 0.5);
@@ -257,7 +263,7 @@ body
 
 @media (max-width: 1000px)
 {
-	.comic-page
+	.comic-book
 	{
 		font-size:                  0.5em;
 	}
@@ -280,5 +286,6 @@ body
 		font-size:                  30em;
 		left:                       50%;
 		bottom:                     -0.5em;
+		z-index:                    10;
 	}
 }
